// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCheckbox.js should be disabled 1`] = `
<input aria-checked="false"
       disabled="disabled"
       id="input-101"
       role="checkbox"
       type="checkbox"
       value
>
`;

exports[`VCheckbox.js should be render colored checkbox 1`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <span aria-hidden="true"
              class="v-icon notranslate theme--light"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               role="img"
               aria-hidden="true"
               class="v-icon__svg"
          >
            <path d="M19,3H5C3.89,3 3,3.89 3,5V19C3,20.1 3.9,21 5,21H19C20.1,21 21,20.1 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z">
            </path>
          </svg>
        </span>
        <input aria-checked="false"
               id="input-106"
               role="checkbox"
               type="checkbox"
               value
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <transition-group-stub tag="div"
                             name="message-transition"
                             class="v-messages__wrapper"
      >
      </transition-group-stub>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.js should render themed component 1`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <span aria-hidden="true"
              class="v-icon notranslate theme--light"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               role="img"
               aria-hidden="true"
               class="v-icon__svg"
          >
            <path d="M19,3H5C3.89,3 3,3.89 3,5V19C3,20.1 3.9,21 5,21H19C20.1,21 21,20.1 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z">
            </path>
          </svg>
        </span>
        <input aria-checked="false"
               id="input-96"
               role="checkbox"
               type="checkbox"
               value
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <transition-group-stub tag="div"
                             name="message-transition"
                             class="v-messages__wrapper"
      >
      </transition-group-stub>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.js should use custom icons 1`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox v-input--indeterminate">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <span aria-hidden="true"
              class="v-icon notranslate theme--light"
        >
          <svg-icon class="v-icon__component theme--light">
          </svg-icon>
        </span>
        <input aria-checked="mixed"
               id="input-91"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <transition-group-stub tag="div"
                             name="message-transition"
                             class="v-messages__wrapper"
      >
      </transition-group-stub>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.js should use custom icons 2`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox v-input--indeterminate">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <span aria-hidden="true"
              class="v-icon notranslate theme--light"
        >
          <svg-icon class="v-icon__component theme--light">
          </svg-icon>
        </span>
        <input aria-checked="mixed"
               id="input-91"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <transition-group-stub tag="div"
                             name="message-transition"
                             class="v-messages__wrapper"
      >
      </transition-group-stub>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.js should use custom icons 3`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox v-input--indeterminate">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <span aria-hidden="true"
              class="v-icon notranslate theme--light"
        >
          <svg-icon class="v-icon__component theme--light">
          </svg-icon>
        </span>
        <input aria-checked="mixed"
               id="input-91"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <transition-group-stub tag="div"
                             name="message-transition"
                             class="v-messages__wrapper"
      >
      </transition-group-stub>
    </div>
  </div>
</div>
`;
